[gd_scene load_steps=14 format=2]

[ext_resource path="res://controls.gd" type="Script" id=1]
[ext_resource path="res://fonts/TitleFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/ButtonFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://icons/arrowLeft.png" type="Texture" id=4]
[ext_resource path="res://icons/arrowRight.png" type="Texture" id=5]
[ext_resource path="res://icons/clockwise.png" type="Texture" id=6]
[ext_resource path="res://icons/counterclockwise.png" type="Texture" id=7]
[ext_resource path="res://icons/arrowDown.png" type="Texture" id=8]
[ext_resource path="res://icons/harddrop.png" type="Texture" id=9]
[ext_resource path="res://icons/hold.png" type="Texture" id=10]
[ext_resource path="res://icons/pause.png" type="Texture" id=11]
[ext_resource path="res://icons/HICON.png" type="Texture" id=12]
[ext_resource path="res://icons/XICON.png" type="Texture" id=13]

[node name="controls_ui" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = 20.0
margin_right = 10.0
margin_bottom = 60.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )
__meta__ = {
"__editor_plugin_screen__": "2D"
}

[node name="pause" type="Label" parent="."]
margin_left = -220.0
margin_top = -190.0
margin_right = 280.0
margin_bottom = -151.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.443137, 0.709804, 0.819608, 0.533333 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 0.0968627 )
text = "PAUSE"
align = 1
valign = 1

[node name="bindings" type="Control" parent="."]
margin_left = -190.0
margin_top = -130.0
margin_right = -150.0
margin_bottom = -90.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="move_left" type="Control" parent="bindings"]
margin_left = 20.0
margin_top = 65.0
margin_right = 60.0
margin_bottom = 105.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Button" type="Button" parent="bindings/move_left"]
margin_left = 80.0
margin_right = 174.0
margin_bottom = 37.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "Press key"

[node name="arrowLeft" type="Sprite" parent="bindings/move_left"]
position = Vector2( 30, 20 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )

[node name="move_right" type="Control" parent="bindings"]
margin_left = 220.0
margin_top = 65.0
margin_right = 260.0
margin_bottom = 105.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Button" type="Button" parent="bindings/move_right"]
margin_left = 84.0
margin_top = -1.0
margin_right = 178.0
margin_bottom = 36.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "Press key"

[node name="arrowRight" type="Sprite" parent="bindings/move_right"]
position = Vector2( 34, 19 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 5 )

[node name="rotate_clockwise" type="Control" parent="bindings"]
margin_left = 224.0
margin_top = 114.0
margin_right = 264.0
margin_bottom = 154.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Button" type="Button" parent="bindings/rotate_clockwise"]
margin_left = 80.0
margin_right = 174.0
margin_bottom = 37.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "Press key"

[node name="clockwise" type="Sprite" parent="bindings/rotate_clockwise"]
position = Vector2( 30, 15 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 6 )

[node name="rotate_counterclockwise" type="Control" parent="bindings"]
margin_left = 15.0
margin_top = 115.0
margin_right = 55.0
margin_bottom = 155.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Button" type="Button" parent="bindings/rotate_counterclockwise"]
margin_left = 84.0
margin_top = -1.0
margin_right = 178.0
margin_bottom = 36.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "Press key"

[node name="counterclockwise" type="Sprite" parent="bindings/rotate_counterclockwise"]
position = Vector2( 35, 15 )
scale = Vector2( 0.82, 0.82 )
texture = ExtResource( 7 )

[node name="soft_drop" type="Control" parent="bindings"]
margin_left = 20.0
margin_top = 165.0
margin_right = 60.0
margin_bottom = 205.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Button" type="Button" parent="bindings/soft_drop"]
margin_left = 80.0
margin_right = 174.0
margin_bottom = 37.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "Press key"

[node name="arrowDown" type="Sprite" parent="bindings/soft_drop"]
position = Vector2( 30, 20 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 8 )

[node name="hard_drop" type="Control" parent="bindings"]
margin_left = 220.0
margin_top = 165.0
margin_right = 260.0
margin_bottom = 205.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Button" type="Button" parent="bindings/hard_drop"]
margin_left = 84.0
margin_top = -1.0
margin_right = 178.0
margin_bottom = 36.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "Press key"

[node name="harddrop" type="Sprite" parent="bindings/hard_drop"]
position = Vector2( 34, 19 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 9 )

[node name="hold" type="Control" parent="bindings"]
margin_left = 20.0
margin_top = 215.0
margin_right = 60.0
margin_bottom = 255.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Button" type="Button" parent="bindings/hold"]
margin_left = 80.0
margin_right = 174.0
margin_bottom = 37.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "Press key"

[node name="hold" type="Sprite" parent="bindings/hold"]
position = Vector2( 30, 20 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 10 )

[node name="pause" type="Control" parent="bindings"]
margin_left = 220.0
margin_top = 215.0
margin_right = 260.0
margin_bottom = 255.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Button" type="Button" parent="bindings/pause"]
margin_left = 84.0
margin_top = -1.0
margin_right = 178.0
margin_bottom = 36.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "Press key"

[node name="pause" type="Sprite" parent="bindings/pause"]
position = Vector2( 34, 19 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 11 )

[node name="hgate" type="Control" parent="bindings"]
margin_left = 220.0
margin_top = 265.0
margin_right = 260.0
margin_bottom = 305.0

[node name="Button" type="Button" parent="bindings/hgate"]
margin_left = 84.0
margin_top = -1.0
margin_right = 178.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 3 )
text = "Press Key"

[node name="h" type="Sprite" parent="bindings/hgate"]
position = Vector2( 34, 19 )
scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 12 )

[node name="xgate" type="Control" parent="bindings"]
margin_left = 20.0
margin_top = 265.0
margin_right = 60.0
margin_bottom = 305.0

[node name="Button" type="Button" parent="bindings/xgate"]
margin_left = 80.0
margin_top = -1.0
margin_right = 174.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 3 )
text = "Press key"

[node name="x" type="Sprite" parent="bindings/xgate"]
position = Vector2( 34, 19 )
scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 13 )

[node name="hint" type="Label" parent="."]
margin_left = -220.0
margin_top = -135.0
margin_right = 280.0
margin_bottom = -84.0
custom_fonts/font = ExtResource( 3 )
text = "Press [pause key] to resume
or click on a button to change key assignment"
align = 1
valign = 1
